Fix chevron alignment

--- a/res/css/structures/_SpacePanel.scss
+++ b/res/css/structures/_SpacePanel.scss
@@ -244,7 +244,7 @@ $activeBorderColor: $secondary-content;
             position: relative;
 
             &::before {
-                top: 2px;
+                top: 3px;
                 left: 2px;
                 content: '';
                 width: 16px;
